WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130729
[iOS] Playing video does not disable display sleep.
https://bugs.webkit.org/show_bug.cgi?id=130729
Summary
[iOS] Playing video does not disable display sleep.
Jer Noble
Reported
2014-03-25 10:40:05 PDT
[iOS] Playing video does not disable display sleep.
Attachments
Patch
(10.99 KB, patch)
2014-03-25 10:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(13.00 KB, patch)
2014-03-25 10:54 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(25.07 KB, patch)
2014-03-25 11:27 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-03-25 10:46:46 PDT
Created
attachment 227766
[details]
Patch
Jer Noble
Comment 2
2014-03-25 10:54:06 PDT
Created
attachment 227767
[details]
Patch
Jer Noble
Comment 3
2014-03-25 11:27:13 PDT
Created
attachment 227773
[details]
Patch
Eric Carlson
Comment 4
2014-03-25 11:42:27 PDT
Comment on
attachment 227773
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227773&action=review
> Source/WebCore/platform/DisplaySleepDisabler.h:33 > + static std::unique_ptr<DisplaySleepDisabler> create(const char* reason);
Nit: "reason" isn't necessary.
> Source/WebCore/platform/cocoa/DisplaySleepDisablerCocoa.hSource/WebCore/platform/mac/DisplaySleepDisabler.h:40 > + DisplaySleepDisablerCocoa(const char* reason);
Ditto.
Jer Noble
Comment 5
2014-03-25 13:26:19 PDT
Committed
r166247
: <
http://trac.webkit.org/changeset/166247
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug